refactor: location handler files
