# apps/api/spec/openapi.json
@@ -22,17 +22,37 @@
         "type": "object",
         "properties": {
           "id": {
-            "type": "integer"
+            "type": "integer",
+            "description": "ユーザーID",
+            "example": 1
           },
           "name": {
             "type": "string",
             "minLength": 1,
-            "maxLength": 24
+            "maxLength": 24,
+            "description": "名前",
+            "example": "johndoe"
+          },
+          "createdAt": {
+            "type": "string",
+            "description": "作成日時（ISO 8601）",
+            "example": "2024-04-01T01:23:45Z"
+          },
+          "updatedAt": {
+            "type": "string",
+            "description": "更新日時（ISO 8601）（更新されるたびに更新日時が入る）",
+            "example": "2024-04-01T01:23:45Z"
+          },
+          "deletedAt": {
+            "type": "string",
+            "description": "削除日時（ISO 8601）（論理削除されたら削除日時が入る）",
+            "example": "2024-04-01T01:23:45Z"
           }
         },
         "required": [
           "id",
-          "name"
+          "name",
+          "createdAt"
         ]
       },
       "ProblemDetails": {
@@ -150,11 +170,29 @@
                   "name": {
                     "type": "string",
                     "minLength": 1,
-                    "maxLength": 24
+                    "maxLength": 24,
+                    "description": "名前",
+                    "example": "johndoe"
+                  },
+                  "createdAt": {
+                    "type": "string",
+                    "description": "作成日時（ISO 8601）",
+                    "example": "2024-04-01T01:23:45Z"
+                  },
+                  "updatedAt": {
+                    "type": "string",
+                    "description": "更新日時（ISO 8601）（更新されるたびに更新日時が入る）",
+                    "example": "2024-04-01T01:23:45Z"
+                  },
+                  "deletedAt": {
+                    "type": "string",
+                    "description": "削除日時（ISO 8601）（論理削除されたら削除日時が入る）",
+                    "example": "2024-04-01T01:23:45Z"
                   }
                 },
                 "required": [
-                  "name"
+                  "name",
+                  "createdAt"
                 ]
               }
             }
@@ -204,7 +242,9 @@
         "parameters": [
           {
             "schema": {
-              "type": "integer"
+              "type": "integer",
+              "description": "ユーザーID",
+              "example": 1
             },
             "required": true,
             "name": "id",
@@ -263,7 +303,9 @@
         "parameters": [
           {
             "schema": {
-              "type": "integer"
+              "type": "integer",
+              "description": "ユーザーID",
+              "example": 1
             },
             "required": true,
             "name": "id",
@@ -279,11 +321,29 @@
                   "name": {
                     "type": "string",
                     "minLength": 1,
-                    "maxLength": 24
+                    "maxLength": 24,
+                    "description": "名前",
+                    "example": "johndoe"
+                  },
+                  "createdAt": {
+                    "type": "string",
+                    "description": "作成日時（ISO 8601）",
+                    "example": "2024-04-01T01:23:45Z"
+                  },
+                  "updatedAt": {
+                    "type": "string",
+                    "description": "更新日時（ISO 8601）（更新されるたびに更新日時が入る）",
+                    "example": "2024-04-01T01:23:45Z"
+                  },
+                  "deletedAt": {
+                    "type": "string",
+                    "description": "削除日時（ISO 8601）（論理削除されたら削除日時が入る）",
+                    "example": "2024-04-01T01:23:45Z"
                   }
                 },
                 "required": [
-                  "name"
+                  "name",
+                  "createdAt"
                 ]
               }
             }
@@ -341,7 +401,9 @@
         "parameters": [
           {
             "schema": {
-              "type": "integer"
+              "type": "integer",
+              "description": "ユーザーID",
+              "example": 1
             },
             "required": true,
             "name": "id",
