# apps/api/src/gateway/db/user.ts
@@ -1,22 +1,23 @@
+import type { z } from '@hono/zod-openapi'
 import { eq } from 'drizzle-orm'
+import { isNotNull } from 'drizzle-orm'
+import { createSelectSchema } from 'drizzle-zod'
 import { db } from '~/gateway/db/factory/instance'
 import { users } from '~/gateway/db/factory/schema'
 
-// TODO: tableのschemaから導出できないか？drizzle-zodとかつかうべきかも
-export type UserEntity = {
-  id: number
-  name: string
-  createdAt: string
-  updatedAt?: string
-  deletedAt?: string
-}
-
 export const userRepository = {
   search: async (limit = 10, offset = 0) => {
-    return await db.query.users.findMany({ limit, offset })
+    const result = await db
+      .select()
+      .from(users)
+      .where(isNotNull(users.deletedAt))
+      .limit(limit)
+      .offset(offset)
+    return result
   },
   find: async (id: number) => {
-    return await db.query.users.findFirst({ where: eq(users.id, id) })
+    const result = await db.select().from(users).where(eq(users.id, id)).limit(1)
+    return !result.length ? undefined : result[0]
   },
   create: async (name: string) => {
     return await db.insert(users).values({ name }).returning()
@@ -28,3 +29,7 @@ export const userRepository = {
     return await db.delete(users).where(eq(users.id, id))
   },
 }
+
+const UserEntitySchema = createSelectSchema(users)
+
+export type UserEntity = z.infer<typeof UserEntitySchema>
