# apps/api/src/presenter/handler/createUser.ts
@@ -1,7 +1,7 @@
 import type { RouteHandler } from '@hono/zod-openapi'
 import { createRoute } from '@hono/zod-openapi'
-import { ProblemDetail } from '~/presenter/schema/promlem-details'
-import { User } from '~/presenter/schema/user'
+import { ProblemDetailSchema } from '~/domain/schema/promlem-details'
+import { UserSchema } from '~/domain/schema/user'
 import { logger } from '~/utils/log'
 
 export const createUserRoute = createRoute({
@@ -14,7 +14,7 @@ export const createUserRoute = createRoute({
     body: {
       content: {
         'application/json': {
-          schema: User.omit({ id: true }),
+          schema: UserSchema.omit({ id: true }),
         },
       },
     },
@@ -22,21 +22,21 @@ export const createUserRoute = createRoute({
   responses: {
     200: {
       description: '正常応答',
-      content: { 'application/json': { schema: User } },
+      content: { 'application/json': { schema: UserSchema } },
     },
     400: {
       description: 'リクエスト不正',
-      content: { 'application/json': { schema: ProblemDetail } },
+      content: { 'application/json': { schema: ProblemDetailSchema } },
     },
     500: {
       description: 'エラー応答',
-      content: { 'application/json': { schema: ProblemDetail } },
+      content: { 'application/json': { schema: ProblemDetailSchema } },
     },
   },
 })
 
-export const createUserHandler: RouteHandler<typeof createUserRoute> = (ctx) => {
+export const createUserHandler: RouteHandler<typeof createUserRoute> = async (ctx) => {
   const body = ctx.req.valid('json')
   logger.info({ body }, 'createUserHandler')
-  return ctx.json({ id: 1, name: body.name })
+  return ctx.json({ id: 1, name: 'johndoe', createdAt: '2024-04-01T01:23:45Z' })
 }
